2002-05-22 10:18 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-font-lock-commands): Added.
	(xbase-mode): Changed value of `font-lock-defaults' to use the above.

2002-05-22 10:16 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-font-lock-keywords): Renamed to `xbase-font-lock-statements'.
	(xbase-mode): Changed value of `font-lock-defaults' to use the above.

2002-05-22 10:11 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-calculate-offset): Removed.
	(xbase-calculate-indent-with-offset): Added. This replaces
	`xbase-calculate-offset'. The main difference is that a specific
	column value is now supported as an "offset". This means that the
	likes of TEXT/ENDTEXT can support having the intervening text at
	column zero.
	(xbase-some-statement-indentation): Added.
	(xbase-previous-opening-statement-indentation) Changed to use the
	above.
	(xbase-previous-opening/interim-statement-indentation): Changed to
	use the above.
	(xbase-indent-level): Changed to use
	`xbase-calculate-indent-with-offset'.
	(xbase-indent-rules): Added TEXT/ENDTEXT support.

2002-05-22 09:04 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el: Major re-working of indentation code and font lock
	code.

2002-05-20 17:50 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Removed `make-local-variable' declaration
	for `xbase-indent-level', no such buffer local variable is
	required.

2002-05-20 16:12 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Made sure that `indent-line-function' is
	a buffer local variable before setting it to `xbase-indent-line'.

2002-05-20 14:39 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el: Renamed symbols using "select" in their name to
	"do-case".

2002-05-20 10:13 UTC+0100  Dave Pearson  <davep@davep.org>

	* xbase.el (xbase-mode): Changed `mode-name' from "xBase" to
	"Xbase".

2002-05-20 10:09 UTC+0100  Dave Pearson  <davep@davep.org>
